gitops/apps/target/nginx/01-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  finalizers:
    - kubernetes
