gitops/apps/target/nginx/04-Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-trimtech
spec:
  tls:
  - hosts:
    - www.trimtech.com.br
    secretName: www.trimtech.com.br-tls
  rules:
    - host: wwww.trimtech.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
